# ChangeLog for dev-python/django-otp-qr
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> django-otp-qr-0.1.0.ebuild,
  django-otp-qr-0.1.1.ebuild:
  dev-python/django-otp-qr: Updated ebuild headers to match new $Id$ line

  15 Feb 2015; Johann Schmitz <ercpe@gentoo.org> django-otp-qr-0.1.0.ebuild,
  django-otp-qr-0.1.1.ebuild:
  S="${WORKDIR}" no longer needed

  15 Feb 2015; Johann Schmitz <ercpe@gentoo.org> django-otp-qr-0.1.0.ebuild,
  django-otp-qr-0.1.1.ebuild:
  Updated HOMEPAGE and SRC_URI of django-otp-qr

*django-otp-qr-0.1.1 (27 Dec 2014)

  27 Dec 2014; Johann Schmitz <ercpe@gentoo.org> +django-otp-qr-0.1.1.ebuild:
  Version bump

*django-otp-qr-0.1.0 (25 Dec 2014)

  25 Dec 2014; Johann Schmitz <ercpe@gentoo.org> +django-otp-qr-0.1.0.ebuild,
  +metadata.xml:
  Ebuild for django-otp-qr