@@ -1,2 +1,1 @@
-DIST django-otp-qr-0.1.0.tar.gz 8412 SHA256 b4e8554742993695a1b38e6b5468a84e47fe1364c663f7020c67b42b34af32ec SHA512 340425f7a4e703da7db55e1588273a06a9295ab86485b792a6313ecbe0fad4f093097ab89b88c4a5192f322446545ce6fbf94add3e11491ca91d94563931b8e9 WHIRLPOOL bcf1c75aa19fb3a6306077166894b85fb9ab826308960542c2f7f7757c162f3a797b0e27fe1d5988b44f878beacaa98bc1eccbd687aa496046ead6d27cd90d1c
 DIST django-otp-qr-0.1.1.tar.gz 8487 SHA256 2eb6396ce999a01c511ddfac1afff35a50ebd4458d7e4579645c2de44b9b3867 SHA512 ee4224e4d140b2ff0b643ff99939c46b06f66702858143e5609c3ea204e95a5e86a930d53b127c2b8044af01633a8e5251418ee8770fed46e88b800b76218096 WHIRLPOOL d9e80a63622d4b314b83474f5a8247df5c314372699af789899260037f17d396786db1f208be79c396549d94accd6a62eaf6992d79f12c6f24e72bc1bb348ef8
